--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,4 +9,8 @@
     <string name="subscriber_inserted_successfully">Subscriber was successfully inserted</string>
     <string name="subscriber_error_t_insert">There was an error when inserting Subscriber</string>
 
+    <!-- Subscriber Fragment -->
+    <string name="subscriber_list_title">Subscriber List</string>
+
+
 </resources>
